--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -189,29 +189,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "8QgOpE-wjQKl"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ufRZ7TLwjQKo"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dados = pd.read_csv('dados.csv')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -222,8 +226,109 @@
     "outputId": "36b6565f-bb67-47b7-ea64-8d2695c60e6b",
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UF</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cor</th>\n",
+       "      <th>Anos de Estudo</th>\n",
+       "      <th>Renda</th>\n",
+       "      <th>Altura</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>800</td>\n",
+       "      <td>1.603808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1150</td>\n",
+       "      <td>1.739790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>880</td>\n",
+       "      <td>1.760444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3500</td>\n",
+       "      <td>1.783158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>150</td>\n",
+       "      <td>1.690631</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   UF  Sexo  Idade  Cor  Anos de Estudo  Renda    Altura\n",
+       "0  11     0     23    8              12    800  1.603808\n",
+       "1  11     1     23    2              12   1150  1.739790\n",
+       "2  11     1     35    8              15    880  1.760444\n",
+       "3  11     0     46    2               6   3500  1.783158\n",
+       "4  11     1     47    8               9    150  1.690631"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3520,7 +3625,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -3534,7 +3639,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.11.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "fa1b88445fa9577be92b5861f1d0fc722cfd53ff43d9fc9e3d8f4ced48b3b716"
+   }
   }
  },
  "nbformat": 4,
