--- a/Versão_bibliotecas.ipynb
+++ b/Versão_bibliotecas.ipynb
@@ -1,29 +1,29 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Untitled6.ipynb",
-      "version": "0.3.2",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
-        "id": "kffSOYcgir5Q",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
+        "colab_type": "code",
+        "id": "kffSOYcgir5Q",
         "outputId": "50032805-bedc-4165-d643-22a32105367e"
       },
-      "cell_type": "code",
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Versão do pandas -> 2.0.3\n",
+            "Versão do numpy -> 1.24.3\n",
+            "Versão do scipy -> 1.11.1\n",
+            "Versão do matplotlib -> 3.7.2\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas, numpy, scipy, matplotlib\n",
         "\n",
@@ -31,33 +31,49 @@
         "print('Versão do numpy -> %s' % numpy.__version__)\n",
         "print('Versão do scipy -> %s' % scipy.__version__)\n",
         "print('Versão do matplotlib -> %s' % matplotlib.__version__)"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Versão do pandas -> 0.23.4\n",
-            "Versão do numpy -> 1.16.2\n",
-            "Versão do scipy -> 1.2.1\n",
-            "Versão do matplotlib -> 3.0.3\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
-      "metadata": {
-        "id": "bcAPEvyqjJCx",
-        "colab_type": "code",
-        "colab": {}
-      },
       "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": null,
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "bcAPEvyqjJCx"
+      },
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Untitled6.ipynb",
+      "provenance": [],
+      "version": "0.3.2"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.11.5 ('base')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.5"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "fa1b88445fa9577be92b5861f1d0fc722cfd53ff43d9fc9e3d8f4ced48b3b716"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
