Updated - Calculando a probabilidade Binomial

--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -499,14 +499,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "-U2sGssNG3B4"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.special import comb"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -555,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -565,12 +567,26 @@
     "id": "c2t7yHl7G3B9",
     "outputId": "6d1e9337-9d68-4866-9e48-3dbb3f81d07d"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50063860.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combinacoes = comb(60, 6)\n",
+    "combinacoes"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -580,8 +596,40 @@
     "id": "LpioeTSXG3CB",
     "outputId": "d1e0ab82-be84-423c-e206-a9f8e1437df4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.000000019974489\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = 1 / combinacoes\n",
+    "print('%0.15f' % probabilidade)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53130.0 0.000018821757952\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercício Aula\n",
+    "\n",
+    "combinacoes_2 = comb(25, 20)\n",
+    "probabilidade_2 = 1 / combinacoes_2\n",
+    "print(combinacoes_2, '%0.15f' % probabilidade_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -615,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -625,8 +673,22 @@
     "id": "WmnjMTnYG3CH",
     "outputId": "859f37e5-992a-4ccf-fbfb-4e2cf52c4373"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 10\n",
+    "n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -680,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -690,8 +752,23 @@
     "id": "AazGDtt0G3CS",
     "outputId": "ccb9e561-0413-43c8-c462-ebea4b6c1097"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numero_de_alternativas_por_questao = 3\n",
+    "p = 1 / numero_de_alternativas_por_questao\n",
+    "p"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -705,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -715,8 +792,22 @@
     "id": "FRhmjCnpG3CZ",
     "outputId": "f521f041-ecf4-4c4c-b696-da7b949d657a"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6666666666666667"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = 1 - p\n",
+    "q"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -730,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -740,8 +831,22 @@
     "id": "MmHpiIIuG3Cj",
     "outputId": "6975cb4f-5cd3-4234-f7b0-b5d01ceb0430"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 5\n",
+    "k"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -755,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -765,8 +870,19 @@
     "id": "tZBbMIzKG3Cn",
     "outputId": "cb9ddc72-bd3a-40e6-f432-ad02048a3047"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13656455\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = (comb(n, k) * (p ** k) * (q ** (n - k)))\n",
+    "print('%0.8f' % probabilidade)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -781,14 +897,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "rhlsI3iLG3Cr"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.stats import binom"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -802,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -812,8 +930,19 @@
     "id": "OjS1xsz5G3Cu",
     "outputId": "e5406623-9e3e-4d41-d1de-c774dc96bc17"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13656455\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = binom.pmf(k, n, p)\n",
+    "print('%0.8f' % probabilidade)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -831,31 +960,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21312808006909487"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom.pmf(5, n, p) + binom.pmf(6, n, p) + binom.pmf(7, n, p) + binom.pmf(8, n, p) + binom.pmf(9, n, p) + binom.pmf(10, n, p)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21312808006909487"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom.pmf([5, 6, 7, 8, 9, 10], n, p).sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21312808006909523"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - binom.cdf(4, n, p)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21312808006909525"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom.sf(4, n, p)"
+   ]
   },
   {
    "cell_type": "markdown",
