Uptaded - Resolvendo os exercicios da aula

--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -1039,6 +1039,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.37500000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pergunta da Luri na Aula\n",
+    "\n",
+    "n = 4\n",
+    "p = 1 / 2\n",
+    "q = 1 - p\n",
+    "k = 2\n",
+    "\n",
+    "resposta = binom.pmf(k, n, p)\n",
+    "print('%0.8f' % resposta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.22477320\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercício da Aula\n",
+    "\n",
+    "n = 10\n",
+    "p = 1/6\n",
+    "q = 1 - p\n",
+    "k = 2\n",
+    "\n",
+    "resposta = binom.sf(k, n, p)\n",
+    "print('%0.8f' % resposta)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
