Updated - Conhecendo a distribuicao poisson

--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1130,12 +1130,26 @@
     "id": "Xw9b6ch3G3C1",
     "outputId": "b4bb8b11-5113-4cc9-bac1-59e9acaf67e6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = 0.6\n",
+    "p"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1145,12 +1159,26 @@
     "id": "R3-RaxP5G3C3",
     "outputId": "180b09ba-666e-47c9-b476-224c71fdd5c0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 12\n",
+    "n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1160,12 +1188,26 @@
     "id": "otBHHyD0G3C6",
     "outputId": "c3bdd1ab-763a-43db-ec2e-fb890aa78e3f"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 8\n",
+    "k"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1175,12 +1217,23 @@
     "id": "ZAoBvbQqG3C9",
     "outputId": "62d68ce0-f87f-4879-cc48-4358a7f23a68"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.21284094\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = binom.pmf(k, n, p)\n",
+    "print('%0.8f' % probabilidade)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1190,8 +1243,58 @@
     "id": "Tg53uGL4G3DA",
     "outputId": "cf68634d-68fd-41c5-a9a1-98c5ead8b548"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.3852281856"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equipes = 30 * probabilidade\n",
+    "equipes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.11325600\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5.662799999999998"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercicio da Aula\n",
+    "\n",
+    "p = 0.22\n",
+    "n = 3\n",
+    "k = 2\n",
+    "\n",
+    "probabilidade = binom.pmf(k, n, p)\n",
+    "print('%0.8f' % probabilidade)\n",
+    "familias = 50 * probabilidade\n",
+    "familias"
+   ]
   },
   {
    "cell_type": "markdown",
