Updated - Resolvendo exercicios com distribucao poisson

--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -1447,18 +1447,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "w23fjVT-G3DS"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1468,8 +1470,21 @@
     "id": "rdNqMuFNG3DU",
     "outputId": "fad8f9cf-efe3-44e4-8bd3-7495c4161845"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.718281828459045"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.e"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1503,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1513,8 +1528,22 @@
     "id": "2fVfJxdSG3DY",
     "outputId": "5f93f4cb-eef7-459d-836c-eb825cf3f1d5"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media = 20\n",
+    "media"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1528,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1538,8 +1567,22 @@
     "id": "yXB3QhWyG3Da",
     "outputId": "70e860fe-353f-43ba-98e9-0976282de023"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 15\n",
+    "k"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1553,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1563,8 +1606,19 @@
     "id": "IEGO31WCG3Df",
     "outputId": "3ededd4d-1b97-428a-ad3f-1b8facfc3e38"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.05164885\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilidade = ((np.e ** (-media)) * (media ** k)) / (np.math.factorial(k))\n",
+    "print('%0.8f' % probabilidade)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1598,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1608,8 +1662,44 @@
     "id": "sNw4oCAyG3Dk",
     "outputId": "21ded08e-1fc3-4315-c608-9c016af07e86"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.05164885\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import poisson\n",
+    "\n",
+    "probabilidade = poisson.pmf(k, media)\n",
+    "print('%0.8f' % probabilidade)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.04458765\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercicio Luri\n",
+    "\n",
+    "media = 20\n",
+    "k = 25\n",
+    "\n",
+    "probabilidade = poisson.pmf(k, media)\n",
+    "print('%0.8f' % probabilidade)\n"
+   ]
   },
   {
    "cell_type": "markdown",
