Updated - Utilizando a distribuicao Normal com area entre 2 valores definidos (superior e inferior)

--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -2677,7 +2677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 69,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2694,7 +2694,7 @@
        "1.7"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2706,7 +2706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 70,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2723,7 +2723,7 @@
        "0.1"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2735,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2752,7 +2752,7 @@
        "1.0000000000000009"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2774,7 +2774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 72,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2791,7 +2791,7 @@
        "0.8413"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2842,6 +2842,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9986501019683699"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercicio Luri\n",
+    "\n",
+    "media = 70\n",
+    "desvio_padrao = 5\n",
+    "z = (85 - media) / desvio_padrao\n",
+    "norm.cdf(z)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -2873,7 +2898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2883,12 +2908,26 @@
     "id": "mxPsPIOYG3Er",
     "outputId": "d86de31f-1ca0-443c-8ed6-81edfe5d36f4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.0"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z_inferior = (1.6 - media) / desvio_padrao\n",
+    "round(Z_inferior, 2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2898,8 +2937,22 @@
     "id": "s0Vf0GXHG3Et",
     "outputId": "5237e5e2-547b-4cbf-a5da-52bd4933f6a1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z_superior = (1.8 - media) / desvio_padrao\n",
+    "round(Z_superior, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2913,7 +2966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2923,12 +2976,26 @@
     "id": "swZ6SVQGG3E0",
     "outputId": "53e30c74-5ec5-4737-f928-600388bfe570"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6826000000000001"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = (0.8413 - 0.5) * 2\n",
+    "probabilidade"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2938,8 +3005,22 @@
     "id": "oNfZZRBdGy2G",
     "outputId": "408ee333-2e8e-4058-fe74-a75b715eedf8"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6826000000000001"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = 0.8413 - (1 - 0.8413)\n",
+    "probabilidade"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2953,7 +3034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2963,12 +3044,26 @@
     "id": "hcps6lkNG3E3",
     "outputId": "c8de38f1-8411-408c-862c-7aa6e099e43f"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6826894921370863"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = norm.cdf(Z_superior) - (1 - norm.cdf(Z_superior))\n",
+    "probabilidade"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2978,8 +3073,56 @@
     "id": "MjEfhnQEG3E5",
     "outputId": "4a6241c6-1b04-4c5f-b62d-9e98f412f3ad"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6826894921370857"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = norm.cdf(Z_superior) - norm.cdf(Z_inferior)\n",
+    "probabilidade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6826894921370859\n",
+      "0.02271846070634609\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercicio Aula\n",
+    "\n",
+    "media = 300\n",
+    "desvio_padrao = 50\n",
+    "z_superior = (350 - media) / desvio_padrao\n",
+    "z_inferior = (250 - media) / desvio_padrao\n",
+    "\n",
+    "probabilidade_1 = norm.cdf(z_superior) - norm.cdf(z_inferior)\n",
+    "print(probabilidade_1)\n",
+    "\n",
+    "media = 300\n",
+    "desvio_padrao = 50\n",
+    "z_superior = (500 - media) / desvio_padrao\n",
+    "z_inferior = (400 - media) / desvio_padrao\n",
+    "\n",
+    "probabilidade_2 = norm.cdf(z_superior) - norm.cdf(z_inferior)\n",
+    "print(probabilidade_2)"
+   ]
   },
   {
    "cell_type": "markdown",
