Updated - Resolvendo exercicios de distribuicao Normal, calculando a area abaixo, entre e acima de valores determinados

--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -3156,7 +3156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3166,8 +3166,24 @@
     "id": "3OVj60MzG3E_",
     "outputId": "71f57b74-bc13-4493-f8ba-6f05a2a07041"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.9999999999999996"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media = 1.7\n",
+    "desvio_padrao = 0.1\n",
+    "z = (1.9 - media) / desvio_padrao\n",
+    "z"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3181,7 +3197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3191,8 +3207,22 @@
     "id": "mSNfoO6VG3FC",
     "outputId": "da00edc8-cd0e-42ae-a27f-02082230f9e6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.022800000000000042"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = 1 - 0.9772\n",
+    "probabilidade"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3206,7 +3236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3216,12 +3246,26 @@
     "id": "caIE-t83G3FF",
     "outputId": "224b72ff-7edd-4b66-a24e-a1f89e4685c9"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02275013194817921"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = 1 - norm.cdf(z)\n",
+    "probabilidade"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3231,8 +3275,60 @@
     "id": "wKjqQGgMG3FI",
     "outputId": "7ef30837-195e-4f5b-9bef-68fceaff2397"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.022750131948179216"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = norm.cdf(-z)\n",
+    "probabilidade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.83152942\n",
+      "0.00383038\n",
+      "0.25249254\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercicio aula\n",
+    "\n",
+    "media = 720\n",
+    "desvio_padrao = 30\n",
+    "z_inferior = (650 - media) / desvio_padrao\n",
+    "z_superior = (750 - media) / desvio_padrao\n",
+    "probabilidade_1 = norm.cdf(z_superior) - norm.cdf(z_inferior)\n",
+    "print('%0.8f' % probabilidade_1)\n",
+    "\n",
+    "media = 720\n",
+    "desvio_padrao = 30\n",
+    "z = (800 - media) / desvio_padrao\n",
+    "probabilidade_2 = norm.cdf(-z)\n",
+    "print('%0.8f' % probabilidade_2)\n",
+    "\n",
+    "media = 720\n",
+    "desvio_padrao = 30\n",
+    "z = (700 - media) / desvio_padrao\n",
+    "probabilidade_3 = norm.cdf(z)\n",
+    "print('%0.8f' % probabilidade_3)"
+   ]
   },
   {
    "cell_type": "markdown",
